working on js onclicks

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="assets/css/resetstylesheet.css">
     <link rel="stylesheet" href="assets/css/stylesheet.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Stylish">
+    <link rel="stylesheet" href="fonts">
    
 
 </head>
@@ -31,9 +31,9 @@
                 <div class="card-body">
                     <form role="form">
                         <div class="form-group">
-                            <label for="animal-input">Add an animal</label>
-                            <input type="text" class="form-control" id="animal-input"><br>
-                            <button type="submit" class="btn btn-default" id="add-animal" value="Submit">Submit</button>
+                            <label for="emotion-input">Play with your emotions! (add emotion)</label>
+                            <input type="text" class="form-control" id="emotion-input"><br>
+                            <button type="input" class="btn btn-default" id="emotion-input" value="Submit">Input</button>
                         </div>
                     </form>
                 </div>
@@ -45,7 +45,7 @@
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
-    <script src="./assets/javascript/app.js"></script>
+    <script src="assets/js/app.js"></script>
 </body>
 
 </html>
