styled buttons with hover, color and font

--- a/index.html
+++ b/index.html
@@ -6,10 +6,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Emotion Gifs</title>
+
     <link rel="stylesheet" href="assets/css/resetstylesheet.css">
+
     <link rel="stylesheet" href="assets/css/stylesheet.css">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
+
     <link href="https://fonts.googleapis.com/css?family=Staatliches&display=swap" rel="stylesheet">
+
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
+    
    
 
 </head>
@@ -31,9 +36,9 @@
                 <div class="card-body">
                     <form role="form">
                         <div class="form-group">
-                            <label for="emotion-input">Play with your emotions! (add emotion)</label>
-                            <input type="text" class="form-control" id="emotion-input"><br>
-                            <button type="input" class="btn btn-default" id="emotion-input" value="Submit">Input</button>
+                            <label for="emotion-add">Play with your emotions! (add emotion)</label>
+                            <input type="text" class="form-control" id="emotion-add"><br>
+                            <button type="add" class="btn btn-default" id="emotion-add" value="Add">Add</button>
                         </div>
                     </form>
                 </div>
