--- a/index.html
+++ b/index.html
@@ -15,10 +15,16 @@
     <link href="https://fonts.googleapis.com/css?family=Staatliches&display=swap" rel="stylesheet">
 
     <link rel="stylesheet" href="assets/css/stylesheet.css">
-   
+
 </head>
 
 <body>
+
+    <h3>
+        Why don't you tell us how you really feel?
+        <small class="text-muted">Click to see some cool gifs.</small>
+    </h3>
+
     <div class="container">
         <div class="row">
             <div class="col-sm-10">
